--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-        server: ftp.reshub.info
-        username: easyupseba@easyupseba.reshub.info
+        server: ftp.easyupsheba.com
+        username: easyupsheba@admin.easyupsheba.com
         password: ${{ secrets.FTP_PASSWORD }}
