--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME='ইজি উপি সেবা'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8GMnJEkyBEkI2HW0weaJDJXQ4F4F47S9NNdpP/5WFQ0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -30,11 +30,11 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_PORT=465
+MAIL_USERNAME='ইজি উপি সেবা'
+MAIL_PASSWORD=5!W_&#FXw*U0
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="office@easyupseba.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -43,13 +43,13 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1578219
+PUSHER_APP_KEY=82a2101e4693485921af
+PUSHER_APP_SECRET=b09b2b2d3b98fd850177
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_CLUSTER=ap2
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
