--- a/.github/workflows/deploytonobir.yml
+++ b/.github/workflows/deploytonobir.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           php-version: '8.2'  # Change this to your desired PHP version
 
-      - name: Install Composer dependencies
-        run: composer install --no-dev --prefer-dist --no-scripts --no-progress --no-interaction
+      # - name: Install Composer dependencies
+      #   run: composer install --no-dev --prefer-dist --no-scripts --no-progress --no-interaction
 
       - name: Install Node.js
         uses: actions/setup-node@v3
