--- a/.github/workflows/deploytonobir.yml
+++ b/.github/workflows/deploytonobir.yml
@@ -73,8 +73,8 @@ jobs:
           port: 21
           # server_dir: /public_html  # Change this to the desired deployment directory
           # local_dir: ./public
-          dangerous-clean-slate: true
-          synchronize: true
+          # dangerous-clean-slate: true
+          # synchronize: true
           exclude: |
             */.git
             */.git/**
