--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          server: ftp.easyupsheba.com
+          server: ftp.easyupsheba.coms
           username: easyupsheba@admin.easyupsheba.com
           password: ${{ secrets.FTP_PASSWORD }}
